--- a/site.yml
+++ b/site.yml
@@ -2,6 +2,22 @@
 
 - hosts: all
   become: true
+  pre_tasks:
+
+  - name: Instal updates (Ubuntu)
+    apt:
+      upgrade: dist 
+      update_cache: yes
+    when: ansible_distribution == "Ubuntu"
+
+  - name: Instal updates (Rocky)
+    dnf:
+      update_only: yes
+      update_cache: yes
+    when: ansible_distribution == "Rocky"
+
+- hosts: web_servers
+  become: true
   tasks:
 
     - name: install apache and php package for Ubuntu
@@ -10,7 +26,6 @@
           - apache2
           - libapache2-mod-php
         state: latest
-        update_cache: yes
       when: ansible_distribution == "Ubuntu"
 
     - name: install apache and php package for Rocky
@@ -19,7 +34,6 @@
           - httpd
           - php-fpm
         state: latest
-        update_cache: yes
       when: ansible_distribution == "Rocky"
 
     - name: enable httpd
@@ -36,3 +50,29 @@
         permanent: true
         immediate: true
       when: ansible_distribution == "Rocky"
+
+- hosts: db_servers
+  become: true
+  tasks:
+
+    - name: install mariadb package (Ubuntu)
+      apt:
+        name: mariadb-server
+        state: latest
+      when: ansible_distribution == "Ubuntu"
+
+    - name: install mariadb package (Rocky)
+      dnf:
+        name: mariadb
+        state: latest
+      when: ansible_distribution == "Rocky"
+
+- hosts: file_servers
+  become: true
+  tasks:
+
+  - name: install samba package
+    package:
+      name: samba
+      state: latest
+
