--- a/site.yml
+++ b/site.yml
@@ -57,6 +57,15 @@
       immediate: true
     when: ansible_distribution == "Rocky"
 
+  - name: copy default html file for site
+    tags: apache,apache2,httpd
+    copy:
+      src: default_site.html
+      dest: /var/www/html/index.html
+      owner: root
+      group: root
+      mode: 0664
+
 - hosts: db_servers
   become: true
   tasks:
